--- a/scss/core/_typography.scss
+++ b/scss/core/_typography.scss
@@ -93,13 +93,13 @@ h6 {
 }
 
 // text alignment
-.bs-txt-center {
+.bs-text-center {
     text-align: center;
 }
-.bs-txt-left {
+.bs-text-left {
     text-align: left;
 }
-.bs-txt-right {
+.bs-text-right {
     text-align: right;
 }
 
