--- a/scss/core/_variables.scss
+++ b/scss/core/_variables.scss
@@ -78,6 +78,8 @@ $font-size-small: 1.6rem !default;
 $font-size-large: 2.2rem !default;
 $font-weight: 300;
 
+$font-button: $font-body;
+
 $heading-font: $font-body !default;
 $h1-size: 2.8rem !default;
 $h1-line-height: 3rem !default;
